agregados mas publicaciones, cambio de color de los botones modal

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
                 <span>Instagram</span>
             </a>
             <form class="d-flex d-grid gap-3">
-                <!-- <button class="btn btn-success">Create New Post!</button> -->
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Create New Post!
+                    Create New Post
                 </button>
 
                 <!-- Modal -->
@@ -41,12 +40,12 @@
                                 </p>
                                 <input type="text" class="form-control" id="description" aria-describedby="description">
                                 <br>
-                                <button class="btn btn-secondary"><i class="fas fa-camera"></i></button>
-                                <button class="btn btn-secondary"><i class="fas fa-map-marker-alt"></i></button>
+                                <button class="btn btn-light"><i class=" fas fa-camera"></i></button>
+                                <button class="btn btn-light"><i class="fas fa-map-marker-alt"></i></button>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                                <button type="button" class="btn btn-success">Publish</button>
                             </div>
                         </div>
                     </div>
@@ -134,13 +133,36 @@
 
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
             </br>
+            <!-- Arranca el paning individual -->
             <div class="container">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-3">
+                    </div>
+                    <div class="col-6">
+                        <div class="card" style="width: 100%;">
+                            <ul class="list-group  list-group-flush">
+                                <li class="list-group-item">Mike</li>
+                                <li class="list-group-item">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYkpijq0upkUI8K9uo7_0d89LJJYQeqEyNgkUcCItXkw&s"
+                                        class="card-img-top">
+                                </li>
+                                <li class="list-group-item" style="border: none">A <strong>256</strong> les gusta
+                                    esto</li>
+                                <li class="list-group-item"> Una foto de Mike</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-3">
 
                     </div>
-                    <div class="col">
-                        <div class="card" style="width: 18rem;">
+                </div>
+                </br>
+                <div class="row">
+                    <div class="col-3">
+
+                    </div>
+                    <div class="col-6">
+                        <div class="card" style="width: 100%;">
                             <ul class="list-group  list-group-flush">
                                 <li class="list-group-item">Baje a la playa</li>
                                 <li class="list-group-item">
@@ -153,8 +175,72 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-3">
 
+                    </div>
+                </div>
+                </br>
+                <div class="row">
+                    <div class="col-3">
+                    </div>
+                    <div class="col-6">
+                        <div class="card" style="width: 100%;">
+                            <ul class="list-group  list-group-flush">
+                                <li class="list-group-item">Cataratas</li>
+                                <li class="list-group-item">
+                                    <img src="https://media.ambito.com/p/1b59752d6d4bd2092877612106b67da3/adjuntos/239/imagenes/040/757/0040757540/cataratas.jpg"
+                                        class="card-img-top">
+                                </li>
+                                <li class="list-group-item" style="border: none">A <strong>256</strong> les gusta
+                                    esto</li>
+                                <li class="list-group-item">Las cataratas</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-3">
+
+                    </div>
+                </div>
+                </br>
+                <div class="row">
+                    <div class="col-3">
+                    </div>
+                    <div class="col-6">
+                        <div class="card" style="width: 100%;">
+                            <ul class="list-group  list-group-flush">
+                                <li class="list-group-item">Supernatural</li>
+                                <li class="list-group-item">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHYwNG3OTu1E14dD76qeJtV-tEKYl7xKdTOSvtH-vW1g&s"
+                                        class="card-img-top">
+                                </li>
+                                <li class="list-group-item" style="border: none">A <strong>185</strong> les gusta
+                                    esto</li>
+                                <li class="list-group-item">Serion</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                    </div>
+                </div>
+                </br>
+                <div class="row">
+                    <div class="col-3">
+                    </div>
+                    <div class="col-6">
+                        <div class="card" style="width: 100%;">
+                            <ul class="list-group  list-group-flush">
+                                <li class="list-group-item">Perritos</li>
+                                <li class="list-group-item">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8_B0zPLNLGCb9KRnu_4IvUVpkpmUSzIJTzAWqeERTWg&s"
+                                        class="card-img-top">
+                                </li>
+                                <li class="list-group-item" style="border: none">A <strong>185</strong> les gusta
+                                    esto</li>
+                                <li class="list-group-item">Fluffy stuff!</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-3">
                     </div>
                 </div>
             </div>
